# sim2d_game_analyzer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: pythonapp.yml
sim2d_game_analyzer/: MainWindow.py  __init__.py  fmdb_tab.py
test/: conftest.py  test_MainWindow.py
